force-app/main/default/objects/Concert__c/Concert__c.object-meta.xml
<CustomObject>
    <label>Concert</label>
    <nameField>
        <label>Concert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>