force-app/main/default/objects/Concert__c/fields/Concert_Description__c.field-meta.xml
<CustomField>
    <fullName>Concert_Description__c</fullName>
    <label>Concert Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>